tests/file_test/testdata/string_missing_right_quote.expected
tests/file_test/testdata/string_missing_right_quote.llang: error: unterminated string literal
    1|let end = "abc;
     |          ^

