tests/file_test/testdata/string_missing_right_quote.llang
let end = "abc;

# no \" after this line
